fix overflow issue

--- a/input.css
+++ b/input.css
@@ -4,4 +4,5 @@
 
 html {
   font-size: 62.5%;
+  overflow: hidden;
 }
